# microservice

./: .gitignore  docker-compose.yaml
posts/: README.md  app.py  database.py  pyproject.toml  settings.py
